# autotax

./: .gitignore  LICENSE  README.md  pyproject.toml
.antigravitycli/: b3764e93-863f-42e4-816b-45a63dba6051.json
.github/workflows/: release.yaml
src/autotax/: __about__.py  __init__.py  __main__.py  codes.json  joppd_template.j2  surtax.json  tax_2024.json
src/autotax/cli/: __init__.py
